--- a/idf_component.yml
+++ b/idf_component.yml
@@ -1,7 +1,7 @@
-description: ESP32 compatible driver for OV2640, OV3660, OV5640, OV7670 and OV7725 image sensors.
-url: https://github.com/espressif/esp32-camera
-issues: https://github.com/espressif/esp32-camera/issues
-documentation: https://github.com/espressif/esp32-camera/tree/main/README.md
-repository: https://github.com/espressif/esp32-camera.git
+description: ESP32 micropython compatible driver for OV2640, OV3660, OV5640, OV7670 and OV7725 image sensors.
+url: https://github.com/cnadler86/esp32-camera
+issues: https://github.com/cnadler86/esp32-camera/issues
+documentation: https://github.com/cnadler86/esp32-camera/tree/main/README.md
+repository: https://github.com/cnadler86/esp32-camera.git
 dependencies:
   idf: ">=5.1"
