update legacy driver

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,7 +74,7 @@ if(IDF_TARGET STREQUAL "esp32" OR IDF_TARGET STREQUAL "esp32s2" OR IDF_TARGET ST
   # as this features a method to obtain the I2C driver from a port number
 
   if (idf_version VERSION_GREATER_EQUAL "5.4")
-    list(APPEND srcs driver/sccb-ng.c)
+    list(APPEND srcs driver/sccb.c)
 
   else()
     list(APPEND srcs driver/sccb.c)
